find_package(Python3 REQUIRED)

set(TEST_DATA_FILES
    abcd_byte.json
    add_byte.json
    add_long.json
    add_word.json
    adda_long.json
    adda_word.json
    addi_byte.json
    addi_long.json
    addi_word.json
    addq_byte.json
    addq_long.json
    addq_word.json
    addqa_long.json
    addqa_word.json
    addx_byte.json
    addx_long.json
    addx_word.json
    and_byte.json
    and_long.json
    and_word.json
    andi_byte.json
    andi_ccr_byte.json
    andi_long.json
    andi_sr_word.json
    andi_word.json
    asl_byte_count_to_data_register.json
    asl_byte_register_to_data_register.json
    asl_long_count_to_data_register.json
    asl_long_register_to_data_register.json
    asl_word_count_to_data_register.json
    asl_word_register_to_data_register.json
    asl_word_to_memory.json
    asr_byte_count_to_data_register.json
    asr_byte_register_to_data_register.json
    asr_long_count_to_data_register.json
    asr_long_register_to_data_register.json
    asr_word_count_to_data_register.json
    asr_word_register_to_data_register.json
    asr_word_to_memory.json
    bcc_byte.json
    bcc_word.json
    bchg_dynamic_byte.json
    bchg_dynamic_long.json
    bchg_static_byte.json
    bchg_static_long.json
    bclr_dynamic_byte.json
    bclr_dynamic_long.json
    bclr_static_byte.json
    bclr_static_long.json
    bcs_byte.json
    bcs_word.json
    beq_byte.json
    beq_word.json
    bge_byte.json
    bge_word.json
    bgt_byte.json
    bgt_word.json
    bhi_byte.json
    bhi_word.json
    ble_byte.json
    ble_word.json
    bls_byte.json
    bls_word.json
    blt_byte.json
    blt_word.json
    bmi_byte.json
    bmi_word.json
    bne_byte.json
    bne_word.json
    bpl_byte.json
    bpl_word.json
    bra_byte.json
    bra_word.json
    bset_dynamic_byte.json
    bset_dynamic_long.json
    bset_static_byte.json
    bset_static_long.json
    bsr_byte.json
    bsr_word.json
    btst_dynamic_byte.json
    btst_dynamic_long.json
    btst_static_byte.json
    btst_static_long.json
    bvc_byte.json
    bvc_word.json
    bvs_byte.json
    bvs_word.json
    chk_word.json
    clr_byte.json
    clr_long.json
    clr_word.json
    cmp_byte.json
    cmp_long.json
    cmp_word.json
    cmpa_long.json
    cmpa_word.json
    cmpi_byte.json
    cmpi_long.json
    cmpi_word.json
    cmpm_byte.json
    cmpm_long.json
    cmpm_word.json
    dbcc_word.json
    dbcs_word.json
    dbeq_word.json
    dbf_word.json
    dbge_word.json
    dbgt_word.json
    dbhi_word.json
    dble_word.json
    dbls_word.json
    dblt_word.json
    dbmi_word.json
    dbne_word.json
    dbpl_word.json
    dbt_word.json
    dbvc_word.json
    dbvs_word.json
    divs_word.json
    divu_word.json
    eor_byte.json
    eor_long.json
    eor_word.json
    eori_byte.json
    eori_ccr_byte.json
    eori_long.json
    eori_sr_word.json
    eori_word.json
    exg.json
    ext_long.json
    ext_word.json
    jmp.json
    jsr.json
    lea.json
    link.json
    lsl_byte_count_to_data_register.json
    lsl_byte_register_to_data_register.json
    lsl_long_count_to_data_register.json
    lsl_long_register_to_data_register.json
    lsl_word_count_to_data_register.json
    lsl_word_register_to_data_register.json
    lsl_word_to_memory.json
    lsr_byte_count_to_data_register.json
    lsr_byte_register_to_data_register.json
    lsr_long_count_to_data_register.json
    lsr_long_register_to_data_register.json
    lsr_word_count_to_data_register.json
    lsr_word_register_to_data_register.json
    lsr_word_to_memory.json
    move_byte.json
    move_from_sr_word.json
    move_from_usp.json
    move_long.json
    move_to_ccr_word.json
    move_to_sr_word.json
    move_to_usp.json
    move_word.json
    movea_long.json
    movea_word.json
    movem_long_memory.json
    movem_long_register.json
    movem_word_memory.json
    movem_word_register.json
    movep_long.json
    movep_word.json
    moveq_long.json
    muls_word.json
    mulu_word.json
    nbcd_byte.json
    neg_byte.json
    neg_long.json
    neg_word.json
    negx_byte.json
    negx_long.json
    negx_word.json
    nop.json
    not_byte.json
    not_long.json
    not_word.json
    or_byte.json
    or_long.json
    or_word.json
    ori_byte.json
    ori_ccr_byte.json
    ori_long.json
    ori_sr_word.json
    ori_word.json
    pea.json
    reset.json
    rol_byte_count_to_data_register.json
    rol_byte_register_to_data_register.json
    rol_long_count_to_data_register.json
    rol_long_register_to_data_register.json
    rol_word_count_to_data_register.json
    rol_word_register_to_data_register.json
    rol_word_to_memory.json
    ror_byte_count_to_data_register.json
    ror_byte_register_to_data_register.json
    ror_long_count_to_data_register.json
    ror_long_register_to_data_register.json
    ror_word_count_to_data_register.json
    ror_word_register_to_data_register.json
    ror_word_to_memory.json
    roxl_byte_count_to_data_register.json
    roxl_byte_register_to_data_register.json
    roxl_long_count_to_data_register.json
    roxl_long_register_to_data_register.json
    roxl_word_count_to_data_register.json
    roxl_word_register_to_data_register.json
    roxl_word_to_memory.json
    roxr_byte_count_to_data_register.json
    roxr_byte_register_to_data_register.json
    roxr_long_count_to_data_register.json
    roxr_long_register_to_data_register.json
    roxr_word_count_to_data_register.json
    roxr_word_register_to_data_register.json
    roxr_word_to_memory.json
    rte.json
    rtr.json
    rts.json
    sbcd_byte.json
    scc_byte.json
    scs_byte.json
    seq_byte.json
    sf_byte.json
    sge_byte.json
    sgt_byte.json
    shi_byte.json
    sle_byte.json
    sls_byte.json
    slt_byte.json
    smi_byte.json
    sne_byte.json
    spl_byte.json
    st_byte.json
    stop.json
    sub_byte.json
    sub_long.json
    sub_word.json
    suba_long.json
    suba_word.json
    subi_byte.json
    subi_long.json
    subi_word.json
    subq_byte.json
    subq_long.json
    subq_word.json
    subqa_long.json
    subqa_word.json
    subx_byte.json
    subx_long.json
    subx_word.json
    svc_byte.json
    svs_byte.json
    swap.json
    tas.json
    trapv.json
    tst_byte.json
    tst_long.json
    tst_word.json
    unlk.json
    )

set(TEST_GENERATOR_SOURCES
    python/generator/address_mode_data/arithmetic.py
    python/generator/address_mode_data/arithmetic_quick.py
    python/generator/address_mode_data/bitwise_dynamic.py
    python/generator/address_mode_data/bitwise_static.py
    python/generator/address_mode_data/conditional.py
    python/generator/address_mode_data/immediate.py
    python/generator/address_mode_data/miscellaneous.py
    python/generator/address_mode_data/move.py
    python/generator/address_mode_data/multiprecision.py
    python/generator/address_mode_data/shared.py
    python/generator/address_mode_data/shared_mode_data.py
    python/generator/address_mode_data/shift_rotate.py
    python/generator/address_mode_data/single_operand.py
    python/generator/inputs/arithmetic.py
    python/generator/inputs/arithmetic_quick.py
    python/generator/inputs/bitwise.py
    python/generator/inputs/conditional.py
    python/generator/inputs/miscellaneous.py
    python/generator/inputs/move.py
    python/generator/inputs/multiprecision.py
    python/generator/inputs/shift_rotate_left.py
    python/generator/inputs/shift_rotate_right.py
    python/generator/inputs/single_operand.py
    python/generator/outputs/arithmetic.py
    python/generator/outputs/bitwise.py
    python/generator/outputs/conditional.py
    python/generator/outputs/miscellaneous.py
    python/generator/outputs/move.py
    python/generator/outputs/multiprecision.py
    python/generator/outputs/preserve.py
    python/generator/outputs/shared.py
    python/generator/outputs/shift_rotate.py
    python/generator/outputs/single_operand.py
    python/generator/test_files/arithmetic.py
    python/generator/test_files/arithmetic_immediate.py
    python/generator/test_files/arithmetic_quick.py
    python/generator/test_files/bitwise_dynamic.py
    python/generator/test_files/bitwise_static.py
    python/generator/test_files/conditional.py
    python/generator/test_files/miscellaneous.py
    python/generator/test_files/move.py
    python/generator/test_files/multiprecision.py
    python/generator/test_files/shift_rotate_left.py
    python/generator/test_files/shift_rotate_right.py
    python/generator/test_files/shift_rotate_shared.py
    python/generator/test_files/single_operand.py
    python/generator/test_files_manual/exg.py
    python/generator/test_files_manual/jmp.py
    python/generator/test_files_manual/jsr.py
    python/generator/test_files_manual/lea.py
    python/generator/test_files_manual/link.py
    python/generator/test_files_manual/move_usp.py
    python/generator/test_files_manual/movem_long_memory.py
    python/generator/test_files_manual/movem_long_register.py
    python/generator/test_files_manual/movem_word_memory.py
    python/generator/test_files_manual/movem_word_register.py
    python/generator/test_files_manual/movep_long.py
    python/generator/test_files_manual/movep_word.py
    python/generator/test_files_manual/nop.py
    python/generator/test_files_manual/pea.py
    python/generator/test_files_manual/reset.py
    python/generator/test_files_manual/rte.py
    python/generator/test_files_manual/rtr.py
    python/generator/test_files_manual/rts.py
    python/generator/test_files_manual/shared.py
    python/generator/test_files_manual/trapv.py
    python/generator/test_files_manual/unlk.py
    python/generator/types/address_modes/address_decrement.py
    python/generator/types/address_modes/address_displacement.py
    python/generator/types/address_modes/address_increment.py
    python/generator/types/address_modes/address_index.py
    python/generator/types/address_modes/address_indirect.py
    python/generator/types/address_modes/address_mode_base.py
    python/generator/types/address_modes/address_register.py
    python/generator/types/address_modes/bitwise_immediate.py
    python/generator/types/address_modes/branch_byte.py
    python/generator/types/address_modes/branch_subroutine_byte.py
    python/generator/types/address_modes/branch_subroutine_word.py
    python/generator/types/address_modes/branch_word.py
    python/generator/types/address_modes/condition_code_register.py
    python/generator/types/address_modes/conditional_branch.py
    python/generator/types/address_modes/data_direct.py
    python/generator/types/address_modes/decrement_and_branch.py
    python/generator/types/address_modes/default_address_mode_base.py
    python/generator/types/address_modes/immediate.py
    python/generator/types/address_modes/index_register.py
    python/generator/types/address_modes/long.py
    python/generator/types/address_modes/null.py
    python/generator/types/address_modes/pc_displacement.py
    python/generator/types/address_modes/pc_index.py
    python/generator/types/address_modes/quick_immediate.py
    python/generator/types/address_modes/registers_and_memory.py
    python/generator/types/address_modes/short.py
    python/generator/types/address_modes/stack_decrement.py
    python/generator/types/address_modes/stack_increment.py
    python/generator/types/address_modes/status_register.py
    python/generator/types/address_modes/util/checks.py
    python/generator/types/address_modes/util/sign_extend.py
    python/generator/types/condition_code.py
    python/generator/types/cycles.py
    python/generator/types/instruction_inputs.py
    python/generator/types/instruction_outputs.py
    python/generator/types/manual_test_file.py
    python/generator/types/memory.py
    python/generator/types/size.py
    python/generator/types/sized_instruction_inputs.py
    python/generator/types/sized_instruction_test_file.py
    python/generator/types/status_register.py
    python/generator/types/test_data.py
    python/main.py
    )

add_custom_command(
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python
    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/python/venv/bin/activate
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/python/requirements.txt
    COMMAND ${Python3_EXECUTABLE} -m venv venv && ./venv/bin/pip install -r requirements.txt
    COMMENT "Setting up virtual environment"
)
add_custom_target(virtual_environment DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/python/venv/bin/activate)

add_custom_command(
    OUTPUT ${TEST_DATA_FILES}
    DEPENDS ${TEST_GENERATOR_SOURCES}
    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/python/venv/bin/python3 ${CMAKE_CURRENT_SOURCE_DIR}/python/main.py
    COMMENT "Generating test data files"
)
add_custom_target(test_data_files DEPENDS ${TEST_DATA_FILES})
add_dependencies(test_data_files virtual_environment)

add_executable(M68000GeneratedTest
    src/Test.cpp
    src/Mocks.cpp
    src/TestData.cpp
    src/TestFixture.cpp
    )
add_dependencies(M68000GeneratedTest test_data_files)

target_include_directories(M68000GeneratedTest
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    )

target_compile_options(
    M68000GeneratedTest
    PRIVATE
    ${PROCESSORS_COMPILER_FLAGS}
)

target_link_libraries(M68000GeneratedTest
    M68000
    gtest
    gtest_main
    nlohmann_json
    )

add_test(NAME M68000GeneratedTest COMMAND M68000GeneratedTest)